# DummyConcurrency

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake-variants.yaml
Dependencies/: CMakeLists.txt
DummyConcurrency/: CMakeLists.txt  Common.hpp  DummyConcurrency.hpp  ImplementationLayer.hpp  Sources.cmake
DummyConcurrency/Context/: Context.cpp  Context.hpp  Stack.hpp  StackView.hpp  Trampoline.hpp
DummyConcurrency/Context/Exceptions/: Context.hpp
DummyConcurrency/Context/Exceptions/Nop/: Context.cpp  Context.hpp
DummyConcurrency/Context/Exceptions/Unix/: Context.cpp  Context.hpp
DummyConcurrency/Context/Exceptions/nop/: Context.cpp  Context.hpp
DummyConcurrency/Context/Exceptions/unix/: Context.cpp  Context.hpp
DummyConcurrency/Context/Machine/: Context.hpp
DummyConcurrency/Context/Machine/armv8_a_64/: Context.cpp  Context.hpp
DummyConcurrency/Context/Machine/nop/: Context.cpp  Context.hpp
DummyConcurrency/Context/Machine/ucontext/: Context.cpp  Context.hpp
DummyConcurrency/Context/Machine/x86_64/: Context.cpp
DummyConcurrency/Context/Machine/x86_64_unix/: Context.cpp  Context.hpp
DummyConcurrency/Context/Machine/x86_64_win/: Context.S  Context.cpp
DummyConcurrency/Context/Sanitizer/: Context.hpp
DummyConcurrency/Context/Sanitizer/Address/: Context.hpp
DummyConcurrency/Context/Sanitizer/Nop/: Context.hpp
DummyConcurrency/Context/Sanitizer/Thread/: Context.hpp
DummyConcurrency/Context/Stack/: MMap.cpp  MMap.hpp  New.hpp  View.hpp
DummyConcurrency/Context/Wheels/: MMap.cpp  MMap.hpp  PageSize.cpp  PageSize.hpp  View.hpp
DummyConcurrency/DataStructures/: AtomicSharedPtr.hpp  IntrusiveUnboundedBlockingQueue.hpp  LockFreeStack.hpp  StampedPtr.hpp
DummyConcurrency/Fiber/Core/: Awaiter.hpp  Coroutine.cpp  Coroutine.hpp  Fiber.cpp  Fiber.hpp  Forward.hpp  Handle.cpp  Handle.hpp  Hint.hpp  Stack.hpp
DummyConcurrency/Fiber/Scheduling/: Go.hpp  Suspend.cpp  Suspend.hpp  Yield.cpp  Yield.hpp
DummyConcurrency/Fiber/Stack/: IStackPool.cpp  IStackPool.hpp  InlineStackPool.cpp  InlineStackPool.hpp  New.cpp  New.hpp  Size.cpp  Size.hpp  StackPool.cpp  StackPool.hpp  StackProvider.cpp  StackProvider.hpp
DummyConcurrency/Fiber/Synchronization/: Event.cpp  Event.hpp  Mutex.cpp  Mutex.hpp  WaitGroup.cpp  WaitGroup.hpp
DummyConcurrency/Future/: Combinators.hpp  CopyFuture.hpp  Future.hpp  Make.hpp  Terminate.hpp  Terminators.hpp  Traits.hpp
DummyConcurrency/Future/Combinators/Concurrent/: All.hpp  AllOk.hpp  First.hpp  FirstOk.hpp
DummyConcurrency/Future/Combinators/Sequential/: AndThen.hpp  AsTryFuture.hpp  FlatMap.hpp  Flatten.hpp  Map.hpp  MapOk.hpp  OrElse.hpp  Via.hpp
DummyConcurrency/Future/Combine/Concurrent/: All.hpp  First.hpp
DummyConcurrency/Future/Combine/Sequential/: FlatMap.hpp  Flatten.hpp  Map.hpp  Via.hpp
DummyConcurrency/Future/Result/: Combinators.hpp  Error.hpp  Make.hpp  Result.hpp  Traits.hpp
DummyConcurrency/Future/State/: BothContract.hpp  Callback.hpp  ConsumerContract.hpp  Contract.hpp  FirstContract.hpp  OneAllStateMachine.hpp  Rendezvous.hpp  TryBothContract.hpp  TryFirstContract.hpp
DummyConcurrency/Future/Syntax/: Both.hpp  Or.hpp  Pipe.hpp
DummyConcurrency/Future/Terminate/: Detach.hpp  Get.hpp
DummyConcurrency/ImplementationLayer/: ImplementationLayer.hpp
DummyConcurrency/ImplementationLayer/DummyEngine/: DummyEngine.hpp  Fiber.cpp  Fiber.hpp
DummyConcurrency/ImplementationLayer/STD/: Fiber.hpp  Futex.hpp  STD.hpp  SpinWait.hpp
DummyConcurrency/ImplementationLayer/STD/Futex/: Unix.hpp  Windows.hpp
DummyConcurrency/ImplementationLayer/Twist/: Twist.hpp
DummyConcurrency/Result/: Combinators.hpp  Error.hpp  Make.hpp  Result.hpp  Traits.hpp
DummyConcurrency/Runtime/Invoker/: FiberInvoker.cpp  FiberInvoker.hpp  Inline.cpp  Inline.hpp  Invoker.hpp
DummyConcurrency/Runtime/Scheduler/: ExternalThreadPool.cpp  ExternalThreadPool.hpp  Inline.cpp  Inline.hpp  RunLoop.cpp  RunLoop.hpp  Scheduler.hpp  Submit.hpp  Task.hpp  ThreadFactory.hpp  ThreadPool.cpp  ThreadPool.hpp
DummyConcurrency/Scheduler/: Inline.cpp  Inline.hpp  IntrusiveQueue.hpp  RunLoop.cpp  RunLoop.hpp  Submit.hpp  ThreadPool.cpp  ThreadPool.hpp
DummyConcurrency/Scheduler/Interface/: Scheduler.hpp  Task.hpp
DummyConcurrency/Synchronization/: Event.cpp  Event.hpp  SpinLock.cpp  SpinLock.hpp  WaitGroup.cpp  WaitGroup.hpp
DummyConcurrency/Synchronization/Awaiters/: Awaiter.hpp  DoAwait.hpp  FiberAwaiter.cpp  FiberAwaiter.hpp  ThreadAwaiter.hpp
DummyConcurrency/Synchronization/FiberAware/: Event.cpp  Event.hpp  Mutex.cpp  Mutex.hpp  WaitGroup.cpp  WaitGroup.hpp
DummyConcurrency/Synchronization/Thread/: Event.cpp  Event.hpp  SpinLock.cpp  SpinLock.hpp  WaitGroup.cpp  WaitGroup.hpp
DummyConcurrency/Syntax/: Future.hpp  Operators.hpp  Result.hpp  Syntax.hpp
DummyConcurrency/Threading/Synchronization/: SpinLock.cpp  SpinLock.hpp  WaitGroup.cpp  WaitGroup.hpp
DummyConcurrency/Utils/: Assert.hpp  IntrusiveForwardList.hpp  ManualLifetime.hpp  StampedPtr.hpp  Traits.hpp
Examples/: BasicFibers.cpp  BasicFuture.cpp  CMakeLists.txt  FiberAwareSynchornization.cpp  FutexWait.cpp  ThreadPool.cpp
Tests/: CMakeLists.txt  Test.cmake
Tests/DummyConcurrency/: CMakeLists.txt
Tests/DummyConcurrency/DataStructures/: CMakeLists.txt
Tests/DummyConcurrency/DataStructures/AtomicSharedPtr/: CMakeLists.txt  Random.cpp  Stress.cpp  Unit.cpp
Tests/DummyConcurrency/DataStructures/LockFreeStack/: CMakeLists.txt  Model.cpp  Random.cpp  Stress.cpp  Unit.cpp
Tests/DummyConcurrency/Fiber/: CMakeLists.txt
Tests/DummyConcurrency/Fiber/Scheduling/: CMakeLists.txt  SyncRL.cpp  UnitRL.cpp  UnitTP.cpp
Tests/DummyConcurrency/Future/: CMakeLists.txt  Stress.cpp  Unit.cpp
Tests/DummyConcurrency/Scheduler/: CMakeLists.txt
Tests/DummyConcurrency/Scheduler/FiberInvoker/: Unit.cpp  (+1 more)
Tests/DummyConcurrency/Synchronization/: CMakeLists.txt
Tests/DummyConcurrency/Thread/: CMakeLists.txt
Tests/TestingLibrary/: CMakeLists.txt
Tests/TestingLibrary/Testing/: BenchTimeBudget.hpp  Checksum.hpp  Counted.hpp  Cpu.hpp  TimeBudget.hpp  Twist.hpp
(+79 files in other folders)
