add_executable(ExampleThreadPool ThreadPool.cpp)
add_executable(ExampleFiber BasicFibers.cpp)
add_executable(ExampleFutexWait TestFutexWait.cpp)

target_link_libraries(ExampleFiber PUBLIC DummyConcurrency)
target_link_libraries(ExampleThreadPool PUBLIC DummyConcurrency)
target_link_libraries(ExampleFutexWait PUBLIC DummyConcurrency)